# backend/openapi.json
@@ -2167,6 +2167,341 @@
         }
       }
     },
+    "/chat/get/session": {
+      "get": {
+        "parameters": [
+          {
+            "name": "sessionId",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "响应模型",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [],
+                  "properties": {
+                    "session": {
+                      "type": "object",
+                      "required": [
+                        "session",
+                        "sessionMember",
+                        "user",
+                        "latestMessage",
+                        "unreadCount"
+                      ],
+                      "properties": {
+                        "session": {
+                          "type": "object",
+                          "required": [
+                            "id",
+                            "created_at",
+                            "updated_at",
+                            "type"
+                          ],
+                          "properties": {
+                            "id": {
+                              "type": "string"
+                            },
+                            "created_at": {
+                              "type": "string"
+                            },
+                            "updated_at": {
+                              "type": "string"
+                            },
+                            "type": {
+                              "type": "integer"
+                            }
+                          }
+                        },
+                        "sessionMember": {
+                          "type": "object",
+                          "required": [
+                            "id",
+                            "created_at",
+                            "updated_at",
+                            "session_id",
+                            "user_id",
+                            "last_read_seq",
+                            "is_pin",
+                            "other_user_id"
+                          ],
+                          "properties": {
+                            "id": {
+                              "type": "string"
+                            },
+                            "created_at": {
+                              "type": "string"
+                            },
+                            "updated_at": {
+                              "type": "string"
+                            },
+                            "session_id": {
+                              "type": "string"
+                            },
+                            "user_id": {
+                              "type": "string"
+                            },
+                            "last_read_seq": {
+                              "type": "integer"
+                            },
+                            "is_pin": {
+                              "type": "integer"
+                            },
+                            "other_user_id": {
+                              "type": "string"
+                            }
+                          }
+                        },
+                        "user": {
+                          "type": "object",
+                          "required": [
+                            "id",
+                            "created_at",
+                            "updated_at",
+                            "name",
+                            "desc",
+                            "birthday",
+                            "gender",
+                            "avatar_url",
+                            "is_complete_profile"
+                          ],
+                          "properties": {
+                            "id": {
+                              "type": "string"
+                            },
+                            "created_at": {
+                              "type": "string"
+                            },
+                            "updated_at": {
+                              "type": "string"
+                            },
+                            "name": {
+                              "type": "string"
+                            },
+                            "desc": {
+                              "type": "string"
+                            },
+                            "birthday": {
+                              "type": "string"
+                            },
+                            "gender": {
+                              "type": "integer"
+                            },
+                            "avatar_url": {
+                              "type": "string"
+                            },
+                            "is_complete_profile": {
+                              "type": "integer"
+                            }
+                          }
+                        },
+                        "latestMessage": {
+                          "type": "object",
+                          "required": [
+                            "id",
+                            "created_at",
+                            "updated_at",
+                            "type",
+                            "payload",
+                            "session_id",
+                            "user_id",
+                            "content",
+                            "inc_seq"
+                          ],
+                          "properties": {
+                            "id": {
+                              "type": "string"
+                            },
+                            "created_at": {
+                              "type": "string"
+                            },
+                            "updated_at": {
+                              "type": "string"
+                            },
+                            "type": {
+                              "type": "integer"
+                            },
+                            "payload": {
+                              "type": "object",
+                              "required": [],
+                              "properties": {
+                                "1": {
+                                  "type": "object",
+                                  "required": [],
+                                  "properties": {}
+                                },
+                                "2": {
+                                  "type": "object",
+                                  "required": [
+                                    "report_id"
+                                  ],
+                                  "properties": {
+                                    "report_id": {
+                                      "type": "string"
+                                    }
+                                  }
+                                },
+                                "3": {
+                                  "type": "object",
+                                  "required": [
+                                    "work_id",
+                                    "work_title",
+                                    "work_cover_image_path",
+                                    "work_user_id",
+                                    "work_user_name",
+                                    "work_user_avatar_path"
+                                  ],
+                                  "properties": {
+                                    "work_id": {
+                                      "type": "string"
+                                    },
+                                    "work_title": {
+                                      "type": "string"
+                                    },
+                                    "work_cover_image_path": {
+                                      "type": "string"
+                                    },
+                                    "work_user_id": {
+                                      "type": "string"
+                                    },
+                                    "work_user_name": {
+                                      "type": "string"
+                                    },
+                                    "work_user_avatar_path": {
+                                      "type": "string"
+                                    }
+                                  }
+                                },
+                                "4": {
+                                  "type": "object",
+                                  "required": [
+                                    "work_id",
+                                    "work_title",
+                                    "work_cover_image_path",
+                                    "user_id",
+                                    "user_name",
+                                    "user_avatar_path"
+                                  ],
+                                  "properties": {
+                                    "work_id": {
+                                      "type": "string"
+                                    },
+                                    "work_title": {
+                                      "type": "string"
+                                    },
+                                    "work_cover_image_path": {
+                                      "type": "string"
+                                    },
+                                    "user_id": {
+                                      "type": "string"
+                                    },
+                                    "user_name": {
+                                      "type": "string"
+                                    },
+                                    "user_avatar_path": {
+                                      "type": "string"
+                                    }
+                                  }
+                                },
+                                "5": {
+                                  "type": "object",
+                                  "required": [
+                                    "work_id",
+                                    "work_title",
+                                    "work_cover_image_path",
+                                    "user_id",
+                                    "user_name",
+                                    "user_avatar_path"
+                                  ],
+                                  "properties": {
+                                    "work_id": {
+                                      "type": "string"
+                                    },
+                                    "work_title": {
+                                      "type": "string"
+                                    },
+                                    "work_cover_image_path": {
+                                      "type": "string"
+                                    },
+                                    "user_id": {
+                                      "type": "string"
+                                    },
+                                    "user_name": {
+                                      "type": "string"
+                                    },
+                                    "user_avatar_path": {
+                                      "type": "string"
+                                    }
+                                  }
+                                },
+                                "6": {
+                                  "type": "object",
+                                  "required": [
+                                    "work_id",
+                                    "work_title",
+                                    "work_cover_image_path",
+                                    "user_id",
+                                    "user_name",
+                                    "user_avatar_path"
+                                  ],
+                                  "properties": {
+                                    "work_id": {
+                                      "type": "string"
+                                    },
+                                    "work_title": {
+                                      "type": "string"
+                                    },
+                                    "work_cover_image_path": {
+                                      "type": "string"
+                                    },
+                                    "user_id": {
+                                      "type": "string"
+                                    },
+                                    "user_name": {
+                                      "type": "string"
+                                    },
+                                    "user_avatar_path": {
+                                      "type": "string"
+                                    }
+                                  }
+                                }
+                              }
+                            },
+                            "session_id": {
+                              "type": "string"
+                            },
+                            "user_id": {
+                              "type": "string"
+                            },
+                            "content": {
+                              "type": "string"
+                            },
+                            "inc_seq": {
+                              "type": "integer"
+                            }
+                          }
+                        },
+                        "unreadCount": {
+                          "type": "integer"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/chat/pin/session": {
       "post": {
         "parameters": [],
